Update Auth flow